# llm-finetuner

./: CONTRIBUTING.md  Makefile  README.md  requirements.txt  setup.py
finetune/: .gitignore  pyproject.toml
finetune/src/configs/: __init__.py  base_config.py  peft_config.py
finetune/src/data/: reasoning_dataset.py
finetune/src/trainers/: dpo_trainer.py  grpo_trainer.py  sft_trainer.py
finetune/src/utils/: __init__.py
src/: __init__.py  __main__.py
src/cli/: __init__.py  cli_app.py
src/configs/: data_config.py  dpo_config.py  grpo_config.py  training_config.py
src/data/: __init__.py
src/trainers/: __init__.py
src/utils/: logging_utils.py  system_utils.py
