[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune"
version = "1.0.0"
description = "Advanced Professional ML Fine-tuning System - 2025 Optimized Edition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ML Fine-tuning Team", email = "team@example.com"},
]
keywords = ["machine learning", "fine-tuning", "llm", "peft", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "typer>=0.9.0",
    "numpy>=1.24.0",
    "tqdm>=4.64.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
flash-attn = [
    "flash-attn>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/example/finetune"
Repository = "https://github.com/example/finetune"
Documentation = "https://github.com/example/finetune/docs"
"Bug Tracker" = "https://github.com/example/finetune/issues"

[project.scripts]
finetune = "finetune.src.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["finetune*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
